--- a/Programmering Eksamensprojekt/Pages/Home.razor
+++ b/Programmering Eksamensprojekt/Pages/Home.razor
@@ -6,7 +6,13 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Skriv hvad du vil finde bro</h1>
+
+<p>Skriv dit output her: (eksempel: 11)</p>
+<input id="inputField" type="text" @bind="Output"/>
+<p>Skriv dit input her: (eksempel: 6,7)</p>
+<input id="inputField" type="text" @bind="Input" />
+<button id="buttonSearch" @onclick="onSearchButtonClicked">Search</button>
 
 <p>@pString</p>
 <p>@p1String</p>
@@ -33,6 +39,8 @@
     string p10String = "";
     List<List<string>> unitGroups = new List<List<string>>();
 
+    private string Output;
+    private string Input;
     protected override async Task OnInitializedAsync()
     {
         try
@@ -52,7 +60,7 @@
             pString = "JSON virker hype.";
         }
 
-       catch (JsonException jex)
+        catch (JsonException jex)
         {
             pString = $"JSON virker ikke (mindre hype): {jex.Message}";
         }
@@ -60,14 +68,16 @@
         {
             pString = $"Error loading JSON: {ex.Message}";
         }
+    }
 
+    private void onSearchButtonClicked()
+    {
         bool Succes = false;
-        // input required units
-        var Output = "11";
-        var Input = new List<string> { "2", "1", "7", "8", };
-        HashSet<string> HSInput = new HashSet<string>(Input);
-        HashSet<string> requiredUnits = new HashSet<string> { Output };
-        requiredUnits.UnionWith(Input);
+        // input requiredunits
+        List<string> InputList = Input.Split(',').ToList();
+        HashSet<string> HSInput = new HashSet<string>(InputList);
+        HashSet<string> requiredUnits = new HashSet<string> {Output};
+        requiredUnits.UnionWith(InputList);
         // Find matching unit list
         var matchingGroups = unitGroups
             .Where(group => new HashSet<string>(group).IsSubsetOf(requiredUnits) && new HashSet<string>(group).Contains(Output))
@@ -188,14 +198,15 @@
                     {
                         allVariablesFound = false;
                         AlreadyFound.Clear();
-                        FinalEquations.Clear();
+                        //FinalEquations.Clear();
                         break;
                     }
                 }
                 if (allVariablesFound) return true;
+                //returns a succes if all variables to an equation with output was found
             }
             return false;
-        } //returns a succes if all variables to an equation with output was found
+        } 
 
     }
 }
