LaTeX for dayzzz

--- a/Programmering Eksamensprojekt/Pages/Home.razor
+++ b/Programmering Eksamensprojekt/Pages/Home.razor
@@ -6,9 +6,11 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Skriv hvad du vil finde bro</h1>
+<script type="text/javascript" async src="MathJax-master/MathJax-master/es5/tex-mml-chtml.js"></script>
 
-<p>Skriv dit output her: (eksempel: 11)</p>
+<h1>Skriv hvad du vil finde bro</h1>
+<p>Euler’s formula: \( e^{i\pi} + 1 = 0 \)</p>
+<p>Skriv dit output her: (eksempel: 12)</p>
 <input id="inputField" type="text" @bind="Output"/>
 <p>Skriv dit input her: (eksempel: 6,7)</p>
 <input id="inputField" type="text" @bind="Input" />
