--- a/Programmering Eksamensprojekt/Pages/Home.razor
+++ b/Programmering Eksamensprojekt/Pages/Home.razor
@@ -23,14 +23,14 @@
 <p>@pString</p>
 <p>@p1String</p>
 <p>@p2String</p>
-<div @key="@p3String">
-    @p3String
-</div>
+<p>@p3String</p>
 <p>@p4String</p>
 <p>@p5String</p>
 <p>@p6String</p>
 <p>@p7String</p>
-<p>@p8String</p>
+<div @key="@p8String">
+    @p8String
+</div>
 <p>@p9String</p>
 <p>@p10String</p>
 @code {
@@ -98,44 +98,55 @@
     private async Task onSearchButtonClicked()
     {
         bool Succes = false;
-        List<string> InputList = Input.Split(',').ToList();
+        List<string> InputList = new List<string>();
+        if (Input != null)
+        {
+            InputList = Input.Split(',').ToList();
+        }
         HashSet<string> HSInput = new HashSet<string>(InputList);
         HashSet<string> requiredUnits = new HashSet<string> { Output };
         requiredUnits.UnionWith(InputList);
 
-        var matchingFormulas = formulaDictionary
-            .Where(kvp => new HashSet<string>(kvp.Value).IsSubsetOf(requiredUnits) && kvp.Value.Contains(Output))
+
+
+        List<List<string>> AlreadyFound = new List<List<string>>();
+        List<List<string>> FinalEquations = new List<List<string>>();
+        Succes = Search(Output, HSInput, AlreadyFound, FinalEquations, requiredUnits);
+
+        var formulaNames = formulaDictionary
+            .Where(kvp => FinalEquations.Any(eq => eq.SequenceEqual(kvp.Value)))
             .Select(kvp => kvp.Key)
+            .Distinct()
             .ToList();
 
-        if (matchingFormulas.Count > 0)
-        {
-            p3String = string.Join("", matchingFormulas.Select(f => "\\(" + $"{f}" + "\\)"));
-            p10String = "Succes";
-        }
-        else
-        {
-            List<List<string>> AlreadyFound = new List<List<string>>();
-            List<List<string>> FinalEquations = new List<List<string>>();
-            Succes = Search(Output, HSInput, AlreadyFound, FinalEquations);
+        p10String = Succes ? "Succes" : "Fail";
+        p8String = Succes ? string.Join(" ", formulaNames.Select(f => "\\(" + $"{f}" + "\\)")) : "";
 
-            var formulaNames = formulaDictionary
-                .Where(kvp => FinalEquations.Any(eq => eq.SequenceEqual(kvp.Value)))
-                .Select(kvp => kvp.Key)
-                .Distinct()
-                .ToList();
-
-            p10String = Succes ? "Succes" : "Fail";
-            p8String = Succes ? string.Join(" ", formulaNames.Select(f => "\\(" + $"{f}" + "\\)")) : "";
-        }
         //reloads the MathJax
         await InvokeAsync(StateHasChanged);
         await Task.Delay(100);
         await CallMathJax();
     }
     //The search method
-    private bool Search(string Output, HashSet<string> HSInput, List<List<string>> AlreadyFound, List<List<string>> FinalEquations)
+    private bool Search(string Output, HashSet<string> HSInput, List<List<string>> AlreadyFound, List<List<string>> FinalEquations, HashSet<string> requiredUnits)
     {
+        List<List<string>> matchingFormulas = unitGroups
+            .Where(kvp => new HashSet<string>(kvp).IsSubsetOf(requiredUnits) && kvp.Contains(Output))
+            .ToList();
+
+        if (matchingFormulas.Count > 0)
+        {
+            //p3String = string.Join("", matchingFormulas.Select(f => "\\(" + $"{f}" + "\\)" + "   "));
+            //p10String = "Succes";
+            foreach (var List in matchingFormulas)
+            {
+                FinalEquations.Add(List);
+            }
+            return true;
+        }
+
+
+
         List<List<string>> groupsWithOutput = unitGroups
         .Where(group => new HashSet<string>(group).Contains(Output))
         .Except(AlreadyFound)
@@ -177,7 +188,7 @@
                         if (HSInput.IsSupersetOf(HSunitGroups))
                         {
                             matchingGroups3.Add(unitGroups[j]);
-                            
+
                         }
                     }
                 }
@@ -212,6 +223,7 @@
         }
         else
         {
+            p6String = "lol";
             for (int i = 0; i < groupsWithOutput.Count; i++)
             {
                 bool allVariablesFound = true;
@@ -224,15 +236,18 @@
                 foreach (string variable in HSMissingVariables)
                 {
                     //searches with the same method to try to find the remaining equations, and leaves out the already found equation.
-                    if (!Search(variable, HSInput, AlreadyFound, FinalEquations))
+                    if (!Search(variable, HSInput, AlreadyFound, FinalEquations, requiredUnits))
                     {
                         allVariablesFound = false;
-                        AlreadyFound.Clear();
+                        AlreadyFound.Remove(groupsWithOutput[i]);
                         //FinalEquations.Clear();
                         break;
                     }
                 }
-                if (allVariablesFound) return true;
+                if (allVariablesFound) {
+                    FinalEquations.Add(groupsWithOutput[i]);
+                    return true;
+                }
                 //returns a succes if all variables to an equation with output was found
             }
             return false;
